tests/errors/test_98.x
// Duplicate extern

extern let what: void*;
extern let what: void*;

extern fn foo() -> void;
extern fn foo() -> void;

fn main() -> void {}
